src/objects/loan__CR_Metro_2_Data_Format__c.object
<CustomObject>
    <fields>
        <fullName>loan__End_Position__c</fullName>
        <label>End Position</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Field_Name__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>loan__Field_Type__c</fullName>
        <description>These are field type of fields present in metro 2 format segments.</description>
        <label>Field Type</label>
        <picklist>
            <picklistValues>
                <fullName>AlphaNumeric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Numeric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monetory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alpha</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Length__c</fullName>
        <label>Length</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Mapped_Field__c</fullName>
        <label>Mapped Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Mapped_Object__c</fullName>
        <label>Mapped Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Source__c</fullName>
        <label>Source</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>loan__Start_Position__c</fullName>
        <label>Start Position</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Header</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trailer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>CR Metro 2 Data Format</label>
    <nameField>
        <displayFormat>M2DFID-{0000000000}</displayFormat>
        <label>CR Metro 2 Data Format ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CR Metro 2 Data Formats</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>